01-nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: kube-sample
spec:
  containers:
  - name: nginx
    image: nginx:1.21.0
    ports:
    - containerPort: 80
