04-configmap-deployment-mount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: kube-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: my-app
        image: nginx:1.21.0
        ports:
          - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config
      volumes:
      - name: config-volume
        configMap:
          name: app-config
