06-liveness.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-liveness
  namespace: kube-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-liveness
  template:
    metadata:
      labels:
        app: app-liveness
    spec:
      containers:
      - name: my-app
        image: nginx:1.21.0
        ports:
          - containerPort: 80
        livenessProbe:
          httpGet:
            path: /_status/healthz
            port: 80
            httpHeaders:
            - name: X-Custom-Header
              value: Awesome
          initialDelaySeconds: 30
          timeoutSeconds: 3
          periodSeconds: 3
