26-nginx-resource.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-resource
  name: nginx-resource
  namespace: kube-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-resource
  template:
    metadata:
      labels:
        app: nginx-resource
    spec:
      containers:
      - name: nginx
        image: nginx:1.21.0
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "32Mi"
            cpu: "250m"
          limits:
            memory: "64Mi"
            cpu: "500m"
