03-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: kube-sample
spec:
  selector:
    app: nginx
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
  type: ClusterIP
