05-nginx-hostpath.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-hostpath
  namespace: kube-sample
spec:
  selector:
    app: web-hostpath
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30010
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-hostpath
  namespace: kube-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-hostpath
  template:
    metadata:
      labels:
        app: web-hostpath
    spec:
      containers:
      - name: web-hostpath
        image: nginx:1.21.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: hostvol
          mountPath: /usr/share/nginx/html
      volumes:
      - name: hostvol
        hostPath:
          path: /mnt/hostpath
