05-nginx-localstorage.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-localstorage
  namespace: kube-sample
spec:
  selector:
    app: web-localstorage
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30020
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-localstorage
  namespace: kube-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-localstorage
  template:
    metadata:
      labels:
        app: web-localstorage
    spec:
      containers:
      - name: web-localstorage
        image: nginx:1.21.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: local-vol
          mountPath: /usr/share/nginx/html
      volumes:
      - name: local-vol
        persistentVolumeClaim:
          claimName: nginx-local-pvc
