11-nginx-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-rolling
  namespace: kube-sample
spec:
  selector:
    app: webserver-rolling
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30010
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-rolling
  namespace: kube-sample
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver-rolling
  template:
    metadata:
      labels:
        app: webserver-rolling
    spec:
      nodeSelector:
        nodetype: rolling
      containers:
      - name: webserver-blue
        image: nginx:1.14.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: hostvol
          mountPath: /usr/share/nginx/html
      volumes:
      - name: hostvol
        hostPath:
          path: /mnt/vol_blue
