03-nginx-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-web
  namespace: kube-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-web
  template:
    metadata:
      labels:
        app: nginx-web
    spec:
      containers:
      - image: nginx:1.21.0
        name: nginx
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-web
  namespace: kube-sample
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nginx-web
  namespace: kube-sample
spec:
  rules:
  - host: nginx-web.k1-node01
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx-web
            port:
              number: 80
